@@ -1,4 +1,8 @@
 ---
+* [Bug 3824] Spurious "ntpd: daemon failed to notify parent!" logged at
+             event_sync.  Reported by Edward McGuire.  <hart@ntp.org>
+
+---
 (4.2.8p16) 2023/05/31 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Sec 3808] Assertion failure in ntpq on malformed RT-11 date <perlinger@ntp.org>
